glibc (2.22-5) UNRELEASED; urgency=medium

  * 

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 21 Mar 2016 18:45:40 +0100

glibc (2.22-4) unstable; urgency=medium

  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - Fix a memory leak in the resolver.  Closes: #818178.
  * debian/patches/localedata/fr_CA-first_weekday.diff: drop.  Closes:
    #769051.
  * debian/rules, debian/rules.d/build.mk: move the C.UTF-8 locale and
    locales-all generation to a separate target instead of building them
    in the build_libc target.
  * debian/control.in/main, debian/rules, debian/rules.d/build.mk: make sure
    to use the just built localedef when building locales. When
    cross-compiling use the system localedef with the correct endianness and
    build-depends on the correct version.

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff,tg-sendmsg-SCM_CREDS.diff:
    Update.
  * patches/hurd-i386/cvs-errnos.d.diff: New patch to fix build dependency
    loop.
  * patches/hurd-i386/cvs-mach-syscalls.mk.diff: New patch to fix missing
    dependency.

  [ Adam Conrad ]
  * debian/glibc-source.filelist: Refresh list of source files and sort.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 21 Mar 2016 18:41:37 +0100

glibc (2.22-3) unstable; urgency=medium

  * Update from upstream stable branch:
    - Fix linking shared objects that use libmvec.so functions.  Closes:
      #817879.
  * debian/sysdeps/sh4.mk: build with -fno-delete-null-pointer-checks to
    workaround a missing SH4 specific __builtin_trap implementation in GCC.
  * debian/patches/localedata/locale-C.diff: fix LC_TIME week and d_t_fmt
    fields in C.UTF-8 locale.  Closes: #817895.
  * debian/sysdeps/powerpcspe.mk: pass --without-fp to the configure script
    on powerpcspe.  Closes: #817926.
  * debian/rules.d/control.mk: add nios2 architecture.  Closes: #817944.
  * debian/patches/any/submitted-dlopen-noload.diff: new patch to fix a crash