@@ -237,7 +237,6 @@ test-xfail-check-textrel = yes
 test-xfail-opendir-tst1 = yes
 test-xfail-test-idouble = yes
 test-xfail-test-ifloat = yes
-test-xfail-test-lfs = yes
 test-xfail-tst-aio10 = yes
 test-xfail-tst-aio9 = yes
 test-xfail-tst-audit1 = yes
@@ -275,6 +274,10 @@ test-xfail-tst-strtod-round = yes
 test-xfail-tst-sysconf = yes
 test-xfail-tst-tls9-static = yes
 test-xfail-tst-vfork3-mem = yes
+
+# This generates GiBs of data instead of sparse files, putting build box on its knees
+tests-unsupported += test-lfs
+#test-xfail-test-lfs = yes
 
 # happens seldomly
 test-xfail-tst-clock_nanosleep = yes
