@@ -1,6 +1,7 @@
 glibc (2.22-5) UNRELEASED; urgency=medium
 
-  * 
+  [ Samuel Thibault ]
+  * testsuite-xfail-debian.mk: Disable the problematic test-lfs test on hurd.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 21 Mar 2016 18:45:40 +0100
 
